deployment/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-storage-staging
spec:
  selector:
    matchLabels:
      app: model-storage
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: model-storage
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/model-storage:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
